--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     ],
     "action": {
         "default_icon": "images/list.png",
-        "default_title": "Clique para remover SHORTS e EM BREVE"
+        "default_title": "marque como lido"
     },
     "icons": {
         "128": "images/list.png"
